src/objects/Procedural_Asset__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Agency_Website__c</fullName>
        <description>Related agency website.</description>
        <label>Agency Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Autopublish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator field if article needs to be auto published.</description>
        <label>Autopublish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>How To</fullName>
                </value>
                <value>
                    <fullName>Worksheet</fullName>
                </value>
                <value>
                    <fullName>Business Rules</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Format_Text_Test__c</fullName>
        <label>Format Text Test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Marketing_Team__c</fullName>
        <description>Whether the marketing team 
should be notified that this digital 
asset might be worthwhile to 
highlight</description>
        <label>Notify Marketing Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedural_Article_ID__c</fullName>
        <label>Procedural Article ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedural_Attachment__c</fullName>
        <label>Procedural Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Procedural_Type__c</fullName>
        <label>Procedural Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Business Rules</fullName>
                </value>
                <value>
                    <fullName>Prepared Responses</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Email Templates</fullName>
                </value>
                <value>
                    <fullName>Chat Templates</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>EON</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_CMS_Article__c</fullName>
        <label>Related CMS Article</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site_Agency__c</fullName>
        <label>Site (Agency Program)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>USA.gov</fullName>
                </value>
                <value>
                    <fullName>GobiernoUSA.gov</fullName>
                </value>
                <value>
                    <fullName>Kids.gov</fullName>
                </value>
                <value>
                    <fullName>GSA.gov</fullName>
                </value>
                <value>
                    <fullName>BusinessUSA.gov</fullName>
                </value>
                <value>
                    <fullName>DoS</fullName>
                </value>
                <value>
                    <fullName>FWS</fullName>
                </value>
                <value>
                    <fullName>FDA</fullName>
                </value>
                <value>
                    <fullName>TTY</fullName>
                </value>
                <value>
                    <fullName>Benefits.gov</fullName>
                </value>
                <value>
                    <fullName>GovLoans.gov</fullName>
                </value>
                <value>
                    <fullName>ExIm.gov</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Asset_Body__c</fullName>
        <label>Text Asset Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Procedural Asset</label>
    <pluralLabel>Procecural Assets</pluralLabel>
</CustomObject>